wx-core/include/generated/ffi_c.h

// CLASS: wxComboBox
wxClassInfo *wxComboBox_CLASSINFO();
wxComboBox *wxComboBox_new();
wxComboBox *wxComboBox_new2(wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, const wxArrayString * choices, long style, const wxValidator * validator, const wxString * name);
bool wxComboBox_Create1(wxComboBox * self, wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, const wxArrayString * choices, long style, const wxValidator * validator, const wxString * name);
int wxComboBox_GetCurrentSelection(const wxComboBox * self);
bool wxComboBox_IsListEmpty(const wxComboBox * self);
bool wxComboBox_IsTextEmpty(const wxComboBox * self);
void wxComboBox_Popup(wxComboBox * self);
void wxComboBox_Dismiss(wxComboBox * self);
// Mix-in(s) to wxComboBox
wxItemContainer *wxComboBox_AsItemContainer(wxComboBox* obj);
wxTextEntryBase *wxComboBox_AsTextEntry(wxComboBox* obj);
// CLASS: wxComboCtrl
wxClassInfo *wxComboCtrl_CLASSINFO();
wxComboCtrl *wxComboCtrl_new();
wxComboCtrl *wxComboCtrl_new1(wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxComboCtrl_Create(wxComboCtrl * self, wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
void wxComboCtrl_Dismiss(wxComboCtrl * self);
void wxComboCtrl_EnablePopupAnimation(wxComboCtrl * self, bool enable);
bool wxComboCtrl_IsKeyPopupToggle(const wxComboCtrl * self, const wxKeyEvent * event);
void wxComboCtrl_PrepareBackground(const wxComboCtrl * self, wxDC * dc, const wxRect * rect, int flags);
bool wxComboCtrl_ShouldDrawFocus(const wxComboCtrl * self);
wxBitmap *wxComboCtrl_GetBitmapDisabled(const wxComboCtrl * self);
wxBitmap *wxComboCtrl_GetBitmapHover(const wxComboCtrl * self);
wxBitmap *wxComboCtrl_GetBitmapNormal(const wxComboCtrl * self);
wxBitmap *wxComboCtrl_GetBitmapPressed(const wxComboCtrl * self);
wxSize *wxComboCtrl_GetButtonSize(wxComboCtrl * self);
int wxComboCtrl_GetCustomPaintWidth(const wxComboCtrl * self);
wxPoint *wxComboCtrl_GetMargins(const wxComboCtrl * self);
wxComboPopup * wxComboCtrl_GetPopupControl(wxComboCtrl * self);
wxWindow * wxComboCtrl_GetPopupWindow(const wxComboCtrl * self);
wxTextCtrl * wxComboCtrl_GetTextCtrl(const wxComboCtrl * self);
wxRect *wxComboCtrl_GetTextRect(const wxComboCtrl * self);
void wxComboCtrl_HidePopup(wxComboCtrl * self, bool generate_event);
bool wxComboCtrl_IsPopupShown(const wxComboCtrl * self);
bool wxComboCtrl_IsPopupWindowState(const wxComboCtrl * self, int state);
void wxComboCtrl_OnButtonClick(wxComboCtrl * self);
void wxComboCtrl_Popup(wxComboCtrl * self);
void wxComboCtrl_SetButtonBitmaps(wxComboCtrl * self, const wxBitmapBundle * bmp_normal, bool push_button_bg, const wxBitmapBundle * bmp_pressed, const wxBitmapBundle * bmp_hover, const wxBitmapBundle * bmp_disabled);
void wxComboCtrl_SetButtonPosition(wxComboCtrl * self, int width, int height, int side, int spacing_x);
void wxComboCtrl_SetCustomPaintWidth(wxComboCtrl * self, int width);
void wxComboCtrl_SetMainControl(wxComboCtrl * self, wxWindow * win);
bool wxComboCtrl_SetMargins(wxComboCtrl * self, const wxPoint * pt);
bool wxComboCtrl_SetMargins1(wxComboCtrl * self, wxCoord left, wxCoord top);
void wxComboCtrl_SetPopupAnchor(wxComboCtrl * self, int anchor_side);
void wxComboCtrl_SetPopupControl(wxComboCtrl * self, wxComboPopup * popup);
void wxComboCtrl_SetPopupExtents(wxComboCtrl * self, int ext_left, int ext_right);
void wxComboCtrl_SetPopupMaxHeight(wxComboCtrl * self, int height);
void wxComboCtrl_SetPopupMinWidth(wxComboCtrl * self, int width);
void wxComboCtrl_SetText(wxComboCtrl * self, const wxString * value);
void wxComboCtrl_SetTextCtrlStyle(wxComboCtrl * self, int style);
void wxComboCtrl_SetValueByUser(wxComboCtrl * self, const wxString * value);
void wxComboCtrl_ShowPopup(wxComboCtrl * self);
void wxComboCtrl_UseAltPopupWindow(wxComboCtrl * self, bool enable);
int wxComboCtrl_GetFeatures();
// Mix-in(s) to wxComboCtrl
wxTextEntryBase *wxComboCtrl_AsTextEntry(wxComboCtrl* obj);
// CLASS: wxComboPopup
void wxComboPopup_delete(wxComboPopup *self);
bool wxComboPopup_Create(wxComboPopup * self, wxWindow * parent);
void wxComboPopup_DestroyPopup(wxComboPopup * self);
void wxComboPopup_Dismiss(wxComboPopup * self);
bool wxComboPopup_FindItem(wxComboPopup * self, const wxString * item, wxString * true_item);
wxSize *wxComboPopup_GetAdjustedSize(wxComboPopup * self, int min_width, int pref_height, int max_height);
wxComboCtrl * wxComboPopup_GetComboCtrl(const wxComboPopup * self);
wxWindow * wxComboPopup_GetControl(wxComboPopup * self);
wxString *wxComboPopup_GetStringValue(const wxComboPopup * self);
void wxComboPopup_Init(wxComboPopup * self);
bool wxComboPopup_IsCreated(const wxComboPopup * self);
bool wxComboPopup_LazyCreate(wxComboPopup * self);
void wxComboPopup_OnComboDoubleClick(wxComboPopup * self);
void wxComboPopup_OnComboKeyEvent(wxComboPopup * self, wxKeyEvent * event);
void wxComboPopup_OnDismiss(wxComboPopup * self);
void wxComboPopup_OnPopup(wxComboPopup * self);
void wxComboPopup_PaintComboControl(wxComboPopup * self, wxDC * dc, const wxRect * rect);
void wxComboPopup_SetStringValue(wxComboPopup * self, const wxString * value);
// CLASS: wxCommand
wxClassInfo *wxCommand_CLASSINFO();
bool wxCommand_CanUndo(const wxCommand * self);
bool wxCommand_Do(wxCommand * self);
wxString *wxCommand_GetName(const wxCommand * self);
bool wxCommand_Undo(wxCommand * self);
// CLASS: wxCommandEvent
wxClassInfo *wxCommandEvent_CLASSINFO();
void * wxCommandEvent_GetClientData(const wxCommandEvent * self);
wxClientData * wxCommandEvent_GetClientObject(const wxCommandEvent * self);
long wxCommandEvent_GetExtraLong(const wxCommandEvent * self);
int wxCommandEvent_GetInt(const wxCommandEvent * self);
int wxCommandEvent_GetSelection(const wxCommandEvent * self);
wxString *wxCommandEvent_GetString(const wxCommandEvent * self);
bool wxCommandEvent_IsChecked(const wxCommandEvent * self);
bool wxCommandEvent_IsSelection(const wxCommandEvent * self);
void wxCommandEvent_SetClientData(wxCommandEvent * self, void * client_data);
void wxCommandEvent_SetClientObject(wxCommandEvent * self, wxClientData * client_object);
void wxCommandEvent_SetExtraLong(wxCommandEvent * self, long extra_long);
void wxCommandEvent_SetInt(wxCommandEvent * self, int int_command);
void wxCommandEvent_SetString(wxCommandEvent * self, const wxString * string);
// CLASS: wxCommandLinkButton
wxClassInfo *wxCommandLinkButton_CLASSINFO();
wxCommandLinkButton *wxCommandLinkButton_new();
wxCommandLinkButton *wxCommandLinkButton_new1(wxWindow * parent, wxWindowID id, const wxString * main_label, const wxString * note, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxCommandLinkButton_Create(wxCommandLinkButton * self, wxWindow * parent, wxWindowID id, const wxString * main_label, const wxString * note, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
void wxCommandLinkButton_SetMainLabelAndNote(wxCommandLinkButton * self, const wxString * main_label, const wxString * note);
void wxCommandLinkButton_SetMainLabel(wxCommandLinkButton * self, const wxString * main_label);
void wxCommandLinkButton_SetNote(wxCommandLinkButton * self, const wxString * note);
wxString *wxCommandLinkButton_GetMainLabel(const wxCommandLinkButton * self);
wxString *wxCommandLinkButton_GetNote(const wxCommandLinkButton * self);