wx-core/src/generated/ffi_c.rs


    // wxComboBox
    pub fn wxComboBox_CLASSINFO() -> *mut c_void;
    pub fn wxComboBox_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxComboBox_new1(parent: *mut c_void, id: c_int, value: *const c_void, pos: *const c_void, size: *const c_void, n: c_int, choices: wxString, style: c_long, validator: *const c_void, name: *const c_void) -> *mut c_void;
    pub fn wxComboBox_new2(
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        choices: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxComboBox_~wxComboBox(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxComboBox_Create(self_: *mut c_void, parent: *mut c_void, id: c_int, value: *const c_void, pos: *const c_void, size: *const c_void, n: c_int, choices: wxString, style: c_long, validator: *const c_void, name: *const c_void) -> bool;
    pub fn wxComboBox_Create1(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        choices: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxComboBox_GetCurrentSelection(self_: *const c_void) -> c_int;
    pub fn wxComboBox_IsListEmpty(self_: *const c_void) -> bool;
    pub fn wxComboBox_IsTextEmpty(self_: *const c_void) -> bool;
    pub fn wxComboBox_Popup(self_: *mut c_void);
    pub fn wxComboBox_Dismiss(self_: *mut c_void);
    // Mix-in(s) to wxComboBox
    pub fn wxComboBox_AsItemContainer(obj: *mut c_void) -> *mut c_void;
    pub fn wxComboBox_AsTextEntry(obj: *mut c_void) -> *mut c_void;

    // wxComboCtrl
    pub fn wxComboCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxComboCtrl_new() -> *mut c_void;
    pub fn wxComboCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxComboCtrl_~wxComboCtrl(self_: *mut c_void);
    pub fn wxComboCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxComboCtrl_Dismiss(self_: *mut c_void);
    pub fn wxComboCtrl_EnablePopupAnimation(self_: *mut c_void, enable: bool);
    pub fn wxComboCtrl_IsKeyPopupToggle(self_: *const c_void, event: *const c_void) -> bool;
    pub fn wxComboCtrl_PrepareBackground(
        self_: *const c_void,
        dc: *mut c_void,
        rect: *const c_void,
        flags: c_int,
    );
    pub fn wxComboCtrl_ShouldDrawFocus(self_: *const c_void) -> bool;
    pub fn wxComboCtrl_GetBitmapDisabled(self_: *const c_void) -> *mut c_void;
    pub fn wxComboCtrl_GetBitmapHover(self_: *const c_void) -> *mut c_void;
    pub fn wxComboCtrl_GetBitmapNormal(self_: *const c_void) -> *mut c_void;
    pub fn wxComboCtrl_GetBitmapPressed(self_: *const c_void) -> *mut c_void;
    pub fn wxComboCtrl_GetButtonSize(self_: *mut c_void) -> *mut c_void;
    pub fn wxComboCtrl_GetCustomPaintWidth(self_: *const c_void) -> c_int;
    pub fn wxComboCtrl_GetMargins(self_: *const c_void) -> *mut c_void;
    pub fn wxComboCtrl_GetPopupControl(self_: *mut c_void) -> *mut c_void;
    pub fn wxComboCtrl_GetPopupWindow(self_: *const c_void) -> *mut c_void;
    pub fn wxComboCtrl_GetTextCtrl(self_: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxComboCtrl_GetTextIndent(self_: *const c_void) -> c_int;
    pub fn wxComboCtrl_GetTextRect(self_: *const c_void) -> *mut c_void;
    pub fn wxComboCtrl_HidePopup(self_: *mut c_void, generate_event: bool);
    pub fn wxComboCtrl_IsPopupShown(self_: *const c_void) -> bool;
    pub fn wxComboCtrl_IsPopupWindowState(self_: *const c_void, state: c_int) -> bool;
    pub fn wxComboCtrl_OnButtonClick(self_: *mut c_void);
    pub fn wxComboCtrl_Popup(self_: *mut c_void);
    pub fn wxComboCtrl_SetButtonBitmaps(
        self_: *mut c_void,
        bmp_normal: *const c_void,
        push_button_bg: bool,
        bmp_pressed: *const c_void,
        bmp_hover: *const c_void,
        bmp_disabled: *const c_void,
    );
    pub fn wxComboCtrl_SetButtonPosition(
        self_: *mut c_void,
        width: c_int,
        height: c_int,
        side: c_int,
        spacing_x: c_int,
    );
    pub fn wxComboCtrl_SetCustomPaintWidth(self_: *mut c_void, width: c_int);
    pub fn wxComboCtrl_SetMainControl(self_: *mut c_void, win: *mut c_void);
    pub fn wxComboCtrl_SetMargins(self_: *mut c_void, pt: *const c_void) -> bool;
    pub fn wxComboCtrl_SetMargins1(self_: *mut c_void, left: c_int, top: c_int) -> bool;
    pub fn wxComboCtrl_SetPopupAnchor(self_: *mut c_void, anchor_side: c_int);
    pub fn wxComboCtrl_SetPopupControl(self_: *mut c_void, popup: *mut c_void);
    pub fn wxComboCtrl_SetPopupExtents(self_: *mut c_void, ext_left: c_int, ext_right: c_int);
    pub fn wxComboCtrl_SetPopupMaxHeight(self_: *mut c_void, height: c_int);
    pub fn wxComboCtrl_SetPopupMinWidth(self_: *mut c_void, width: c_int);
    pub fn wxComboCtrl_SetText(self_: *mut c_void, value: *const c_void);
    pub fn wxComboCtrl_SetTextCtrlStyle(self_: *mut c_void, style: c_int);
    // BLOCKED: pub fn wxComboCtrl_SetTextIndent(self_: *mut c_void, indent: c_int);
    pub fn wxComboCtrl_SetValueByUser(self_: *mut c_void, value: *const c_void);
    pub fn wxComboCtrl_ShowPopup(self_: *mut c_void);
    pub fn wxComboCtrl_UseAltPopupWindow(self_: *mut c_void, enable: bool);
    pub fn wxComboCtrl_GetFeatures() -> c_int;
    // Mix-in(s) to wxComboCtrl
    pub fn wxComboCtrl_AsTextEntry(obj: *mut c_void) -> *mut c_void;

    // wxComboPopup
    pub fn wxComboPopup_delete(self_: *mut c_void);
    // BLOCKED: pub fn wxComboPopup_new() -> *mut c_void;
    pub fn wxComboPopup_Create(self_: *mut c_void, parent: *mut c_void) -> bool;
    pub fn wxComboPopup_DestroyPopup(self_: *mut c_void);
    pub fn wxComboPopup_Dismiss(self_: *mut c_void);
    pub fn wxComboPopup_FindItem(
        self_: *mut c_void,
        item: *const c_void,
        true_item: *mut c_void,
    ) -> bool;
    pub fn wxComboPopup_GetAdjustedSize(
        self_: *mut c_void,
        min_width: c_int,
        pref_height: c_int,
        max_height: c_int,
    ) -> *mut c_void;
    pub fn wxComboPopup_GetComboCtrl(self_: *const c_void) -> *mut c_void;
    pub fn wxComboPopup_GetControl(self_: *mut c_void) -> *mut c_void;
    pub fn wxComboPopup_GetStringValue(self_: *const c_void) -> *mut c_void;
    pub fn wxComboPopup_Init(self_: *mut c_void);
    pub fn wxComboPopup_IsCreated(self_: *const c_void) -> bool;
    pub fn wxComboPopup_LazyCreate(self_: *mut c_void) -> bool;
    pub fn wxComboPopup_OnComboDoubleClick(self_: *mut c_void);
    pub fn wxComboPopup_OnComboKeyEvent(self_: *mut c_void, event: *mut c_void);
    pub fn wxComboPopup_OnDismiss(self_: *mut c_void);
    pub fn wxComboPopup_OnPopup(self_: *mut c_void);
    pub fn wxComboPopup_PaintComboControl(self_: *mut c_void, dc: *mut c_void, rect: *const c_void);
    pub fn wxComboPopup_SetStringValue(self_: *mut c_void, value: *const c_void);

    // wxCommand
    pub fn wxCommand_CLASSINFO() -> *mut c_void;
    // BLOCKED: pub fn wxCommand_new(can_undo: bool, name: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxCommand_~wxCommand(self_: *mut c_void);
    pub fn wxCommand_CanUndo(self_: *const c_void) -> bool;
    pub fn wxCommand_Do(self_: *mut c_void) -> bool;
    pub fn wxCommand_GetName(self_: *const c_void) -> *mut c_void;
    pub fn wxCommand_Undo(self_: *mut c_void) -> bool;

    // wxCommandEvent
    pub fn wxCommandEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCommandEvent_new(command_event_type: wxEventType, id: c_int) -> *mut c_void;
    pub fn wxCommandEvent_GetClientData(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandEvent_GetClientObject(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandEvent_GetExtraLong(self_: *const c_void) -> c_long;
    pub fn wxCommandEvent_GetInt(self_: *const c_void) -> c_int;
    pub fn wxCommandEvent_GetSelection(self_: *const c_void) -> c_int;
    pub fn wxCommandEvent_GetString(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandEvent_IsChecked(self_: *const c_void) -> bool;
    pub fn wxCommandEvent_IsSelection(self_: *const c_void) -> bool;
    pub fn wxCommandEvent_SetClientData(self_: *mut c_void, client_data: *mut c_void);
    pub fn wxCommandEvent_SetClientObject(self_: *mut c_void, client_object: *mut c_void);
    pub fn wxCommandEvent_SetExtraLong(self_: *mut c_void, extra_long: c_long);
    pub fn wxCommandEvent_SetInt(self_: *mut c_void, int_command: c_int);
    pub fn wxCommandEvent_SetString(self_: *mut c_void, string: *const c_void);

    // wxCommandLinkButton
    pub fn wxCommandLinkButton_CLASSINFO() -> *mut c_void;
    pub fn wxCommandLinkButton_new() -> *mut c_void;
    pub fn wxCommandLinkButton_new1(
        parent: *mut c_void,
        id: c_int,
        main_label: *const c_void,
        note: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxCommandLinkButton_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        main_label: *const c_void,
        note: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxCommandLinkButton_SetMainLabelAndNote(
        self_: *mut c_void,
        main_label: *const c_void,
        note: *const c_void,
    );
    pub fn wxCommandLinkButton_SetMainLabel(self_: *mut c_void, main_label: *const c_void);
    pub fn wxCommandLinkButton_SetNote(self_: *mut c_void, note: *const c_void);
    pub fn wxCommandLinkButton_GetMainLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandLinkButton_GetNote(self_: *const c_void) -> *mut c_void;
